# chatty

./: .gitignore  CMakeLists.txt  CMakePresets.json
client/: CMakeLists.txt
client/src/: application.cpp  application.h  chat.h  main.cpp  simple_client.cpp  simple_client.h  user.h
client/src/component/: chat_room.h  text.h
common/: CMakeLists.txt
common/src/: client.cpp  client.h  connection.h  connection_status.h  handler.h  queue.h  server.cpp  server.h  vector.h
common/src/message/: command.h  message.h
common/src/util/: asio.h  concept.h  literal.h  pointer.h  util.h
server/: CMakeLists.txt
server/src/: application.cpp  application.h  connection_manager.cpp  connection_manager.h  main.cpp  simple_server.cpp  simple_server.h  user.h
